# uzume_vocal

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Expression.hpp  Piece.cpp  SpectrogramNaiveRepository.hpp  SpectrogramReference.cpp  SpectrogramReference.hpp  SpectrumReference.cpp  TrackSpectrogram.hpp  main.cpp
src/domain/: Expression.cpp  Expression.hpp  Piece.cpp  Piece.hpp  SpectrogramReference.cpp  SpectrogramReference.hpp  SpectrumReference.cpp  SpectrumReference.hpp  Track.cpp  Track.hpp
src/gateways/: SpectrogramNaiveRepository.cpp  SpectrogramRepository.hpp
src/usecases/: TrackSpectrogram.cpp  TrackSpectrogram.hpp
test/: CMakeLists.txt  ExpressionTest.cpp  SpectrogramReferenceTest.cpp  TrackTest.cpp
test/domain/: ExpressionTest.cpp  SpectrogramReferenceTest.cpp  TrackTest.cpp
